docs/source/cli/2.12/nkp_create.md
---
title: nkp create
sidebar_label: nkp create
sidebar_position: 10
cli_generated: true
unlisted: true
hide_table_of_contents: true
displayed_sidebar: tutorialSidebar
nkp_minor: 2.12
nkp_patch: 2.12.2
nkp_command_id: nkp_create
nkp_command_kind: parent
---

<div class="cli-doc-ref" aria-hidden="true"></div>

Create one of [appdeployment, bootstrap, capi-components, catalog, chart-bundle, cluster, image, image-bundle, nodepool, package-bundle, workspace]

### Available commands

* [nkp create appdeployment](nkp_create_appdeployment.md) — Create an AppDeployment
* [nkp create bootstrap](nkp_create_bootstrap.md) — Create bootstrap cluster
* [nkp create capi-components](nkp_create_capi-components.md) — Create the CAPI components in the cluster
* [nkp create catalog](nkp_create_catalog.md) — Create a custom catalog GitRepository in project or workspace namespace
* [nkp create chart-bundle](nkp_create_chart-bundle.md) — Create charts bundle based on a catalog applications git repository
* [nkp create cluster](nkp_create_cluster.md) — Create a Kubernetes cluster, one of \[aks, aws, azure, eks, gcp, nutanix, preprovisioned, vcd, vsphere\]
* [nkp create image](nkp_create_image.md) — Create Operating System image for one of \[nutanix\]
* [nkp create image-bundle](nkp_create_image-bundle.md) — Create an image bundle
* [nkp create nodepool](nkp_create_nodepool.md) — Create a nodepool, one of \[aks, aws, azure, eks, gcp, nutanix, preprovisioned, vcd, vsphere\]
* [nkp create package-bundle](nkp_create_package-bundle.md) — Create Operating System package bundle for one of \[rhel-8.6, rhel-8.8, rocky-9.1, rocky-9.4, ubuntu-20.04, ubuntu-22.04\]
* [nkp create workspace](nkp_create_workspace.md) — Create a Workspace
